# mndot-bid-api

./: .env.template  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.template.yml  docker-compose.yml  fly.toml  main.py  next_steps.md  openapi.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
mndot_bid_api/: enums.py  exceptions.py  schema.py
mndot_bid_api/auth/: __init__.py  api_key.py
mndot_bid_api/core/: config.py
mndot_bid_api/db/: __init__.py  create_db.py  database.py  engine.py  interface.py  load_sample_records.py  models.py  sample_data.py  views.py
mndot_bid_api/etl/: __init__.py  df_schemas.py  types.py
mndot_bid_api/operations/: __init__.py  bidders.py  bids.py  contracts.py  crud_interface.py  enums.py  etl.py  invalid_bids.py  items.py  models.py  schema.py  view_interface.py  views.py
mndot_bid_api/routers/: __init__.py  bidders.py  bids.py  contracts.py  etl.py  invalid_bids.py  items.py  views.py
tests/: __init__.py  conftest.py  sample_test_data.py  test_bidder_operations.py  test_bidders.py  test_bids.py  test_conftest_fixtures.py  test_main.py  test_mndot_bid_api.py  test_models_to_dict.py
tests/data/: 220005.oldformat.csv  item_list_2016.csv  item_list_2018.csv  item_list_2020.csv  sample_db_records.py  sample_record_dicts.py
tests/db/: test_interface_create.py  test_interface_delete.py  test_interface_read_all.py  test_interface_read_all_by_kwargs.py  test_interface_read_by_id.py  test_interface_read_one_by_kwargs.py  test_interface_update.py  test_view_interface.py
(+43 files in other folders)
