[tool.poetry]
name = "mndot-bid-api"
version = "0.3.0"
description = ""
authors = ["Devin Power <dpwr16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.87"}
SQLAlchemy = "^1.4.32"
pandas = "^1.5.1"
pandera = "^0.13.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "*"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
